# GATO

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_n.txt  DOCKER_NOTES  Dockerfile  LICENSE  Makefile  README.md  TODO.md  benchmark.py  benchmark_fig8.py  benchmark_pinocchio.py  design_section  docker-compose-install.sh  docker-compose.yml  docker.sh  pyproject.toml
benchmark_results/: benchmark_stats.csv
benchmark_results/1e-4/: 128_benchmark_stats.csv  16_benchmark_stats.csv  32_benchmark_stats.csv  64_benchmark_stats.csv  8_benchmark_stats.csv
benchmark_results/1e-5/: 128_benchmark_stats.csv  16_benchmark_stats.csv  32_benchmark_stats.csv  64_benchmark_stats.csv  8_benchmark_stats.csv
bindings/: README.md  batch_sqp_example.py  batch_sqp_solver.cu  setup.py  sqp_pcg.py  sqp_pcg_n.py
bindings/python/: CMakeLists.txt  batch_sqp_solver.cu  gato_wrapper.cu
bindings/python/bsqp/: interface.py
bindings/python/gato/: CMakeLists.txt  sqp_pcg_n.py  sqp_pcg_n_wrapper.cu  sqp_pcg_wrapper.cu
config/: README.md  config.h  config.yaml  cost_settings.h  settings.h  sim_settings.h  solver_config.h  solver_settings.h
data/: README.md  benchmark_statsgpu_batch128_N16_benchmark_config.pkl  benchmark_statsgpu_batch128_N16_stats_final.pkl  benchmark_statsgpu_batch128_N32_benchmark_config.pkl  benchmark_statsgpu_batch128_N32_stats_final.pkl  benchmark_statsgpu_batch128_N64_benchmark_config.pkl  benchmark_statsgpu_batch16_N16_benchmark_config.pkl  benchmark_statsgpu_batch16_N16_stats_final.pkl  benchmark_statsgpu_batch16_N32_benchmark_config.pkl  benchmark_statsgpu_batch16_N32_stats_final.pkl  benchmark_statsgpu_batch16_N64_benchmark_config.pkl  benchmark_statsgpu_batch16_N64_stats_final.pkl  benchmark_statsgpu_batch1_N16_benchmark_config.pkl  benchmark_statsgpu_batch1_N16_stats_final.pkl  benchmark_statsgpu_batch1_N32_benchmark_config.pkl  benchmark_statsgpu_batch1_N32_stats_final.pkl  benchmark_statsgpu_batch1_N64_benchmark_config.pkl  benchmark_statsgpu_batch1_N64_stats_final.pkl  benchmark_statsgpu_batch2_N16_benchmark_config.pkl  benchmark_statsgpu_batch2_N16_stats_final.pkl  benchmark_statsgpu_batch2_N32_benchmark_config.pkl  benchmark_statsgpu_batch2_N32_stats_final.pkl  benchmark_statsgpu_batch2_N64_benchmark_config.pkl  benchmark_statsgpu_batch2_N64_stats_final.pkl  benchmark_statsgpu_batch32_N16_benchmark_config.pkl  benchmark_statsgpu_batch32_N16_stats_final.pkl  benchmark_statsgpu_batch32_N32_benchmark_config.pkl  benchmark_statsgpu_batch32_N32_stats_final.pkl  benchmark_statsgpu_batch32_N64_benchmark_config.pkl  benchmark_statsgpu_batch32_N64_stats_final.pkl  benchmark_statsgpu_batch4_N16_benchmark_config.pkl  benchmark_statsgpu_batch4_N16_stats_final.pkl  benchmark_statsgpu_batch4_N32_benchmark_config.pkl  benchmark_statsgpu_batch4_N32_stats_final.pkl  benchmark_statsgpu_batch4_N64_benchmark_config.pkl  benchmark_statsgpu_batch4_N64_stats_final.pkl  benchmark_statsgpu_batch64_N16_benchmark_config.pkl  benchmark_statsgpu_batch64_N16_stats_final.pkl  benchmark_statsgpu_batch64_N32_benchmark_config.pkl  benchmark_statsgpu_batch64_N32_stats_final.pkl  (+8 more)
data/urdfs/: indy7.urdf
docs/: README.md
dynamics/: README.md  pend.cuh  point_mass.cuh  rbd_plant.cuh
dynamics/iiwa/: README.md  iiwa14_grid.cuh  iiwa14_plant.cuh
dynamics/indy/: indy7_grid.cuh  indy7_plant.cuh
examples/: CMakeLists.txt  Makefile  README.md  batch_sqp.cu  batch_sqp.py  batchctrl_indy_sqpcpu.py  batchctrl_indy_sqpgpu.py  benchmark_batch_sqp.cu  benchmark_fig8.py  bsqp.cu  clean_runner.py  fig8_0.03.csv  force_estimator.py  force_estimator_cem.py  gato_fig8_tracking.ipynb  gato_hparam_batch.ipynb  gato_hparam_batch_results.pkl  gato_pick&place.ipynb  gato_pick&place_cem.ipynb  gato_pick&place_iiwa.ipynb  gato_pick&place_new_api.ipynb  gato_pick&place_sept_9.ipynb  gato_pickplace.ipynb  gato_pt2pt.ipynb  integratortest.cu  mpc.cu  mpc_bsqp_iiwa.py  mpc_bsqp_indy.py  mpc_n.cu  point_mass.cu  points1000.npy  pt2pt.ipynb  single_sqp.cu  sqp_n.cu  swing_up_pend.cu  test_bsqp_minimal.py  tracking.ipynb
examples/.ipynb_checkpoints/: gato_pick&place-checkpoint.ipynb
examples/iiwa-mpc/description/: iiwa.urdf
examples/iiwa_description/: README.md  iiwa14.urdf
examples/indy7-mpc/description/: indy7.xml
examples/indy7_description/: indy7.urdf
examples/trajfiles/: 16_ee_pos_trajs.csv  8_ee_pos_trajs.csv
experiments/: README.md
experiments/MPCGPU/: CMakeLists.txt  Makefile  swing_up_pend.cu  swing_up_pend.cuh  track_iiwa_pcg.cu  track_iiwa_qdldl.cu
experiments/multisolve/: test_sqp_n.cu  test_sqp_single.cu
gato/: README.md  constants.h  gato.cuh  settings.h  types.cuh
gato/bsqp/: bsqp.cuh  force_estimator.hpp
gato/bsqp/kernels/: batch_utils.cuh  kkt_check.cuh  line_search.cuh  merit.cuh  pcg.cuh  schur_linsys.cuh  setup_kkt.cuh  sim.cuh
gato/config/: constants.h  plant.h  settings.h
gato/dynamics/: README.md  integrator.cuh
gato/dynamics/iiwa14/: iiwa14_fext.cuh  iiwa14_grid.cuh  iiwa14_plant.cuh
gato/dynamics/indy7/: indy7_fext.cuh  indy7_grid.cuh  (+4 more)
gato/multisolve/: batch_sqp.cuh  batch_sqp_solver.cuh  bsqp.cuh
gato/sim/: mpcsim.cuh  mpcsim_n.cuh  simulator.cuh
gato/utils/: cuda.cuh  cuda_utils.cuh  integrator.cuh  integrator_new.cuh  io.cuh  linalg.cuh  matrix.cuh  types.cuh  utils.h
include/: README.md
plots/: fig8_benchmark_heatmap.ipynb
python/: README.md  bindings.cu  bindings_sqp_pcg.cu
python/bsqp/: __init__.py  common.py  config.py  experiment_runner.py  interface.py  mpc_controller.py
python/gato.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: README.md  cost_settings.h  gato.cuh  sim_settings.h  solver_settings.h
src/sim/: mpcsim.cuh
src/utils/: experiment.cuh  integrator.cuh  integrator_error.cuh  integrator_gradient.cuh  integrator_host.cuh  io.cuh  matrix.cuh  simulator.cuh  utils.cuh
tests/: README.md
tools/: README.md  bindings.sh  build.sh  build_MPCGPU.sh  build_examples.sh  clean.sh  cleanup.sh  common.sh  docker.sh  install.sh  rebuild.sh  setup_gato_env.sh
urdfs/mujocomodels/: indy7.urdf  indy7.xml
(+29 files in other folders)
